--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Lugrasimo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
 
 body {
     background: #155984;
@@ -39,6 +40,7 @@ main div {
     margin-bottom: 10px;
     text-align: center;
 }
+
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
@@ -69,4 +71,23 @@ footer {
     main div {
         width: calc(33.3333% - 50px);
     }
+
+    .waheed-name {
+        font-family: "Nabla", system-ui;
+        font-optical-sizing: auto;
+    }
+
+    .name-wrapper {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+    }
+
+    .profile-img {
+        width: 24px;
+        height: 24px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+
 }
