--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,6 +39,15 @@ main div {
     margin-bottom: 10px;
     text-align: center;
 }
+
+main h1{
+    font-family: 'Playfair Display', serif;
+    font-size: 3rem;
+    font-weight: 700;
+    color: hsl(317, 68%, 63%);
+    text-align: center;
+    padding: 30px;
+}
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
