--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -45,6 +45,12 @@ main div {
     font-style: normal;
 }
 
+.renachen {
+    font-family: 'Grand Hotel';
+    font-size: 24px;
+    color:#0CABA8;
+}
+
 footer {
     font-weight: 600;
     text-align: center;
