--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -39,6 +39,13 @@ main div {
     margin-bottom: 10px;
     text-align: center;
 }
+
+h2 {
+    color: rgb(192, 111, 192);
+    font-family: cursive;
+    font-size: 80px;
+}
+
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
