--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -156,3 +156,9 @@ main h1{
   color: #ff00dd;
 }
 }
+.arn {
+    color: #121015;
+    font-size: 30px;
+    font-weight: 900;
+    font-family: condiment;
+}
