--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -48,7 +48,7 @@ main div {
     text-align: center;
 }
 
-h2 {
+#Aroosha {
     color: rgb(192, 111, 192);
     font-family: cursive;
     font-size: 80px;
