--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -86,6 +86,7 @@ main div {
     animation: scan-wiljay 2s ease-in infinite alternate-reverse;
 }
 
+/* hlyke's sytle */
 .hlyke {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: rgb(251, 114, 169);
