--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Jersey+10&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
+
 
 body {
     background: #155984;
@@ -251,6 +253,14 @@ main div {
     color: transparent;
     margin-top: 100px;
 }
+
+#shanellecruz {
+    font-family: "Chelsea Market", system-ui;
+    font-weight: 400;
+    font-style: 150px;
+    color: #b12b66;
+}
+
 
 ;
 
