--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -269,6 +269,13 @@ main div {
   color: #ee7315;
 }
 
+.hlye-style {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 32px;
+    color: #00ff00;
+}
+
 
 #cora-rainbow {
     position: fixed;
