--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -269,6 +269,11 @@ main div {
   color: #ee7315;
 }
 
+#parneet {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    color: #8b00ff;
+}
 
 #cora-rainbow {
     position: fixed;
