--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -370,3 +370,64 @@ main h1 {
   50%  {background-color:yellow; left:200px; top:0px;}
   100% {background-color:blue; left:0px; top:0px;}
 }
+.juan {
+  font-family: "Rubik Broken Fax", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  color:#00FF41
+}
+/*juan animation*/
+.glitch {
+  position: relative;
+  font-size: 4rem;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+  letter-spacing: 2px;
+  animation: glitch 2s infinite;
+}
+
+.glitch::before,
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+}
+
+.glitch::before {
+  left: 2px;
+  text-shadow: -2px 0 red;
+  clip-path: inset(0 0 50% 0);
+  animation: glitch-top 1.5s infinite linear alternate-reverse;
+}
+
+.glitch::after {
+  left: -2px;
+  text-shadow: -2px 0 cyan;
+  clip-path: inset(50% 0 0 0);
+  animation: glitch-bottom 1.5s infinite linear alternate-reverse;
+}
+
+@keyframes glitch {
+  0% { transform: translate(0); }
+  20% { transform: translate(-2px, 2px); }
+  40% { transform: translate(-2px, -2px); }
+  60% { transform: translate(2px, 2px); }
+  80% { transform: translate(2px, -2px); }
+  100% { transform: translate(0); }
+}
+
+@keyframes glitch-top {
+  0% { clip-path: inset(0 0 80% 0); }
+  50% { clip-path: inset(0 0 20% 0); }
+  100% { clip-path: inset(0 0 60% 0); }
+}
+
+@keyframes glitch-bottom {
+  0% { clip-path: inset(80% 0 0 0); }
+  50% { clip-path: inset(20% 0 0 0); }
+  100% { clip-path: inset(40% 0 0 0); }
+}
+/*end of juan animation*/
