--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,6 +9,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Jersey+10&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+NZ+Basic+Guides&display=swap');
 
 
 body {
@@ -260,14 +261,48 @@ main div {
     font-style: 150px;
     color: #b12b66;
 }
-#erik {
-  font-family: "Playwrite IN Guides", cursive;
+
+#adeline {
+  font-family: "Playwrite NZ Basic Guides", cursive;
   font-weight: 400;
   font-style: normal;
-  font-size: 50px;
+  color: #ee7315;
 }
 
-;
+#parneet {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    color: #8b00ff;
+}
+
+#cora-rainbow {
+    position: fixed;
+    top: 50%;                
+    left: 20px;               
+    z-index: 10000 !important;
+    
+
+    font-family: 'Pacifico', cursive;
+    font-size: 70px;
+    font-weight: bold;
+    white-space: nowrap;
+
+   
+    background: linear-gradient(to right, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #8b00ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+    
+    filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
+
+
+    animation: rainbow-flow 3s linear infinite, breathing 2s ease-in-out infinite;
+}
+
+@keyframes rainbow-flow {
+    0% { filter: hue-rotate(0deg); }
+    100% { filter: hue-rotate(360deg); }
+}
 
 footer {
     font-weight: 600;
@@ -319,4 +354,19 @@ main h1 {
     font-size: 32px;
     letter-spacing: 0.08em;
     color: #ff00dd;
+}
+
+#c {
+    font-family: "Rubik Iso", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    color: #0000ff;
+    font-size: 30px;
+    position: relative;
+    animation: cAnimation 2s infinite;
+}
+@keyframes cAnimation {
+  0%   {background-color:blue; left:0px; top:0px;}
+  50%  {background-color:yellow; left:200px; top:0px;}
+  100% {background-color:blue; left:0px; top:0px;}
 }
