--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -431,3 +431,22 @@ main h1 {
   100% { clip-path: inset(40% 0 0 0); }
 }
 /*end of juan animation*/
+
+/* ===== JIN KIM ===== */
+#jin-kim{
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 72px;
+    color: #ffffff;
+  
+    background: rgba(0,0,0,0.25);
+    border: 3px solid rgba(255,255,255,0.35);
+    border-radius: 18px;
+    padding: 22px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+  }
+  
+  #jin-kim:hover{
+    transform: scale(1.05);
+    transition: 0.2s ease;
+  }
