--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Lugrasimo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 body {
     background: #155984;
@@ -39,6 +40,16 @@ main div {
     margin-bottom: 10px;
     text-align: center;
 }
+
+main h1 {
+    font-family: "Rubik", sans-serif;
+    font-weight: 900;
+    font-size: 24px;
+
+    color: #00332e;
+    text-shadow: -3px 4px 2px #80BD9C ;
+}
+
 .bebas-neue-regular {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
