--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Jersey+10&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+NZ+Basic+Guides&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double:wght@100..900&family=Caveat:wght@400..700&family=Rubik+Glitch&display=swap');
 
 body {
     background: #155984;
@@ -464,4 +464,29 @@ main h1 {
     font-weight: 900;
     color: #00332e;
     text-shadow: 2px 3px 2px #80bd9c;
+}
+
+#luis {
+  font-family: "Rubik Glitch", system-ui;
+  font-size: 50px;
+  letter-spacing: 4px;
+  display: inline-block;
+  background-image: url("../images/luisminjarez.jpg");
+  background-size: cover;
+  background-repeat: repeat-y;
+  background-position: 50% 0%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: transparent;
+  animation: moveTextureUp 10s linear infinite;
+}
+
+@keyframes moveTextureUp {
+  from {
+    background-position: 50% 0%;
+  }
+  to {
+    background-position: 50% 100%;
+  }
 }
