--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -466,6 +466,7 @@ main h1 {
     text-shadow: 2px 3px 2px #80bd9c;
 }
 
+/* ===== Luis Minjarez ===== */
 #luis {
   font-family: "Rubik Glitch", system-ui;
   font-size: 50px;
@@ -490,3 +491,4 @@ main h1 {
     background-position: 50% 100%;
   }
 }
+/* ===== Luis Minjarez ===== */
