--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -640,3 +640,36 @@ main h1 {
 }
 
 /* ===== ALIZA CERALDE ===== */
+
+/* ===== EKATERINA GUSAROVA ===== */
+.ekaterinagusarova-wrapper {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+    border-radius: 30px;
+    overflow: hidden;
+}
+
+.ekaterinagusarova-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+#ekaterinagusarova {
+    position: relative;
+    z-index: 1;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    color: #444444;
+}
+/* ===== EKATERINA GUSAROVA ===== */
