--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -798,6 +798,6 @@ main h1 {
     font-size: 48px;
     color: white;
     font-weight: 900;
-    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    text-shadow: 2px 2px 4px rgba(17, 13, 13, 0.3);
     margin: 0;
 }
