--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -825,3 +825,11 @@ main h1 {
     margin: 20px auto;
 }
 /* yuching kao (end) */
+
+/* alecia huang */
+#alecia{
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  color: #7676a0;
+  padding: 10px;
+}
