--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     z-index: 10;
 }
 
-.kathleen-name {
+.yuchingkao-name {
     font-family: 'Montserrat', 'Arial', sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
